<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_top" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/millennium_falcon_home"
            android:title="@string/home_frag" />
        <item
            android:id="@+id/nav_musica"
            android:icon="@drawable/chewbacca_musica"
            android:title="@string/musica_frag" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/r2d2_historico"
            android:title="@string/historico_frag" />
    </group>
    <group android:id="@+id/menu_bottom" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/c3po_about"
            android:title="@string/sobre_frag" />
    </group>


</menu>
