<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="20dp"
    tools:context=".fragments.SobreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/universidade"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/unipar"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/curso"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:textColor="#000"
                android:id="@+id/professor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

            <TextView
                android:textColor="#000"
                android:id="@+id/nomeProf"
                android:layout_below="@+id/professor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nomeProf"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:textColor="#000"
                android:id="@+id/academicos"
                android:layout_below="@+id/nomeProf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/academicos"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

            <TextView
                android:textColor="#000"
                android:id="@+id/aca1"
                android:layout_below="@+id/academicos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/academico1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:textColor="#000"
                android:id="@+id/aca2"
                android:layout_below="@+id/aca1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/academico2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:textColor="#000"
                android:id="@+id/aca3"
                android:layout_below="@+id/aca2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/academico3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/descricao"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

    </LinearLayout>


</FrameLayout>