<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/detail_activity">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        android:orientation="vertical"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/ic_yoda" />

            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/alterar"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dataEditTxt"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/image"
                android:layout_marginTop="100dp"
                android:hint="@string/dataHint"
                android:inputType="date"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/horaEditTxt"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/image"
                android:layout_below="@+id/dataEditTxt"
                android:hint="@string/timeHint"
                android:inputType="time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/updateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:clickable="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/alterarBtn"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/deleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:clickable="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/deleteBtn"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>