<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        android:orientation="vertical"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/horaEditTxt"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_launcher_round" />


            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:text="@string/cadastro"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dataEditTxt"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:hint="@string/dataHint"
                android:inputType="date"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/horaEditTxt"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dataEditTxt"
                android:layout_marginLeft="15dp"
                android:hint="@string/timeHint"
                android:inputType="time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/salvarBtn"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <!--<Button-->
                <!--android:id="@+id/cancelBtn"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/cancelBtn"-->
                <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->


            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
